--- a/style_for_new.css
+++ b/style_for_new.css
@@ -1,62 +1,136 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-image: linear-gradient(to left top, rgba(226, 223, 38, 0.63), rgba(197, 38, 65, 0.685));
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vh;
-    } 
-.heading__main{
-    font-size: 50px;
+    font-family: 'Acme', sans-serif;
+    background-image: url(image/stock-photo-white-transparent-leaf-on-mirror-surface-with-reflection-on-turquoise-background-macro-artistic-1029171697.jpg);
+    background-size: cover;  
+    }
+.header{
+    background-color: rgba(18, 128, 54, 0.637);
+    backface-visibility: hidden;
+    box-shadow: 0px 0px 30px 0px rgb(10, 82, 58);
+}
+.header_main {
+    display: block;
     text-transform: uppercase;
-    padding: 0 20px 10px 100px;
     letter-spacing: 5px;
+    padding-left: 200px;
+    padding-top:5px;
+    animation-name: moveInLeft;
+    animation-duration: 1s;
+    /*animation-delay: 1s;*/
+    /*animation-iteration-count: 3;*/
+    animation-timing-function: ease-out;
+}
+.header_sub{
     display: block;
+    letter-spacing: 30px;
+    font-size: 16px;
+    padding: 5px 5px 0 70px;
+    color: red;
+    animation: moveInRight 1s ease-out;
 }
-.heading__sub{
-    font-size: 25px;
-    text-decoration: underline;
-    letter-spacing: 15px;
-    display: block;
-    padding: 0 20px 10px 100px;
+@keyframes moveInLeft{
+    0%{
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80%{
+        transform: translateX(10px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
 }
-.menu{
-    float: right;
-    display: inline-block;  
+@keyframes moveInRight{
+    0%{
+        opacity: 0;
+        transform: translateX(100px);
+    }
+    80%{
+        transform: translateX(-10px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
 }
-.menu__button{
+.navbar{
     position: absolute;
-    top: 50px;
-    right: 50px;
-    background-color: transparent;
+    top: 20px;
+    right: 5px;
+}
+.navmenu {
+    list-style-type: none;
+    padding: 15px;    
+}
+.navmenu li {
+    float: right;}
+.navmenu li a {
+    text-decoration: none;
+    font-size: 18px;
     color: black;
     font-weight: bold;
-    padding: 16px;
-    cursor: pointer;
-    border: 3px solid #fff;
+    padding: 20px;
 }
-.menu__dropdown{
+.navmenu li a:hover, .navmenu li a:active{
+    color: red;
+}
+.dropdown{
+    position: relative;
+    display: block;
+}
+.dropdown_content{
     position: absolute;
-    top: 104px;
-    right: 50px;
     display: none;
-    background-color:rgb(31, 191, 202);
-    min-width: 158px;
-    box-shadow: 0px 8px 20px 0px rgba(218, 35, 35, 0.2)
     z-index: 1;
 }
-.menu__dropdown a{
-    color: black;
-    border: 3px solid #fff;
-    padding: 12px 16px;
+.dropdown_content a{
+    display: inline-block;
+    height: 5px;
+    width: 130px;
+}
+
+.dropdown:hover .dropdown_content{
+    display: block;
+}
+.button:link, .button:visited {
     text-decoration: none;
-    display: block;
+    text-transform: uppercase;
+    color: black;
+    background-color: white;
+    font-weight: bold;
+    border: 2px solid rgba(226, 214, 214, 0.884);
+    padding: 5px 20px;
+    text-align: center;
+    position: absolute;
+    margin: 30vh 40vw;
+    display: inline-block;
+    border-radius: 100px;
+    /*transition: all .2s;*/
+    animation-name: moveInBottom;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    /*animation-fill-mode: backwards;*/
 }
-.menu__dropdown a:hover{
-    background-color: rgba(226, 223, 38, 0.63);
-    color: #fff;
+.button:hover{
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px 0 rgba(43, 43, 43, 0.836);
 }
-.menu:hover .menu__dropdown{
-    display: block;
+.button:active{
+    transform: translateY(-1px); 
+    box-shadow: 0 5px 10px 0 rgba(43, 43, 43, 0.836);
 }
-.menu:hover .menu__button{
-    background-color: transparent;
+@keyframes moveInBottom{
+    0%{
+        opacity: 0;
+        transform: translateY(-30px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
 }
