--- a/style-for-new.css
+++ b/style-for-new.css
@@ -4,31 +4,34 @@
 }
 body{
     font-family: 'Acme', sans-serif;
-    background-image: url(image/stock-photo-white-transparent-leaf-on-mirror-surface-with-reflection-on-turquoise-background-macro-artistic-1029171697.jpg);
-    background-size: cover;  
-    }
-.header{
-    background-color: rgba(18, 128, 54, 0.637);
+    background-image: url(image/cover.jpg);
+    background-size: cover;
+    
+}
+.wrapper{
+    display: flex;
+    background-color: white;
+    box-shadow: 0px 0px 7px 0px rgb(12, 12, 12);
+}
+.text-header {
     backface-visibility: hidden;
-    box-shadow: 0px 0px 30px 0px rgb(10, 82, 58);
+    display: flex;
+    flex-flow: column wrap;
+    width: 50vw;
 }
 .header_main {
-    display: block;
+    text-align: center;
     text-transform: uppercase;
     letter-spacing: 5px;
-    padding-left: 200px;
-    padding-top:5px;
     animation-name: moveInLeft;
     animation-duration: 1s;
-    /*animation-delay: 1s;*/
-    /*animation-iteration-count: 3;*/
     animation-timing-function: ease-out;
 }
 .header_sub{
-    display: block;
-    letter-spacing: 30px;
-    font-size: 16px;
-    padding: 5px 5px 0 70px;
+    text-align: center;
+    letter-spacing: 20px;
+    font-size: 17px;
+    text-align: center;
     color: red;
     animation: moveInRight 1s ease-out;
 }
@@ -58,44 +61,38 @@ body{
         transform: translate(0);
     }
 }
-.navbar{
-    position: absolute;
-    top: 20px;
-    right: 5px;
-}
 .navmenu {
+    width: 50vw;
+    height: 61.6px;
     list-style-type: none;
-    padding: 15px;    
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: flex-end;
 }
-.navmenu li {
-    float: right;}
 .navmenu li a {
     text-decoration: none;
     font-size: 18px;
     color: black;
     font-weight: bold;
-    padding: 20px;
+    height: 30px;
 }
 .navmenu li a:hover, .navmenu li a:active{
     color: red;
 }
-.dropdown{
-    position: relative;
-    display: block;
-}
 .dropdown_content{
-    position: absolute;
     display: none;
-    z-index: 1;
 }
-.dropdown_content a{
-    display: inline-block;
-    height: 5px;
-    width: 130px;
-}
-
 .dropdown:hover .dropdown_content{
-    display: block;
+    position: absolute;
+    display: flex;
+    flex-flow: column wrap;
+}
+.main-box{
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .button:link, .button:visited {
     text-decoration: none;
@@ -106,15 +103,10 @@ body{
     border: 2px solid rgba(226, 214, 214, 0.884);
     padding: 5px 20px;
     text-align: center;
-    position: absolute;
-    margin: 30vh 40vw;
-    display: inline-block;
     border-radius: 100px;
-    /*transition: all .2s;*/
     animation-name: moveInBottom;
     animation-duration: 1s;
     animation-timing-function: ease-out;
-    /*animation-fill-mode: backwards;*/
 }
 .button:hover{
     transform: translateY(-3px);
