--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,229 +1,8 @@
-@mixin typography {
-    font-weight: bold;
-    font-size: 3rem;
-    text-align: end;   
-}
-@mixin typography-element {
-    font-weight: 1000;
-    font-size: 2.5rem;
-    text-align: center; 
-}
-@mixin typography-fullname {
-    text-align: center;
-    font-size: 0.8rem;
-}
-@mixin typography-number {
-    font-size: 1rem;
-    padding-top: 1px;
-    padding-left: 2px;
-}
-@mixin tdata {
-    border: 1px solid white;
-    width: 5%;
-    height: 70px;
-}
-@mixin list-style {
-    font-weight: bold;
-    font-size: 1.5rem;
-    padding-bottom: 5px;
-}
-
-
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: 0;
-}
-html {
-    font-size: 62.5%;
-}
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 10px 50px;
-}
-h1 {
-    text-align: center;
-    font-size: 3rem;
-    font-variant: small-caps;
-}
-.table-main {
-    width: 100%;
-    td {
-        .list1 {
-            display: flex;
-            flex-flow: column wrap;
-            height: 216.4px;
-            justify-content: center;
-            align-content: center;   
-            &-grey {
-                @include list-style;
-                list-style-image: url(../image/grey-square.gif);
-            }
-            &-orange {
-                 @include list-style;
-                list-style-image: url(../image/orange-square.gif);
-            }
-            &-red {
-                 @include list-style;
-                list-style-image: url(../image/red-square.gif);
-            }
-            &-yellow {
-                 @include list-style;
-                list-style-image: url(../image/yellow-square.gif);
-            }
-        }
-        .list2 {
-            &-green {
-                 @include list-style;
-                list-style-image: url(../image/green-square.gif);
-            }
-            &-lightgreen {
-                 @include list-style;
-                list-style-image: url(../image/lightgreen-square.gif);
-            }
-            &-cyan {
-                 @include list-style;
-                list-style-image: url(../image/cyan-square.gif);
-            }
-        }
-        .list3 {
-            &-blue {
-                 @include list-style;
-                list-style-image: url(../image/blue-square.gif);
-            }
-            &-lan {
-                 @include list-style;
-                list-style-image: url(../image/lan-square.gif);
-            }
-            &-act {
-                 @include list-style;
-                list-style-image: url(../image/act-square.gif);
-            }
-        }
-              
-        @include tdata;
-        .number {
-            @include typography-number;
-            &-span {
-                font-size: 1.4rem;
-                font-weight: bold;
-                text-align: center;
-            }
-        }
-        .fullname {
-            @include typography-fullname;  
-        }
-        .element {
-            @include typography-element;
-        }
-    }
-    .elements-grey {
-        background-color: rgb(168, 164, 164);
-    }
-    .elements-orange {
-        background-color: rgb(231, 161, 31);
-    }
-    .elements-red {
-        background-color: rgb(209, 22, 22);
-    }
-    .elements-blue {
-        background-color: rgb(72, 72, 223);
-    }
-    .elements-green {
-        background-color: rgb(6, 158, 6);
-    }
-    .elements-lightgreen {
-    background-color:  rgb(92, 247, 195);
-    }
-    .elements-yellow {
-        background-color: yellow;
-    }
-    .elements-cyan {
-        background-color: cyan;
-    }
-    .elements-lan {
-        background-color: rgb(141, 51, 224);  
-    }
-    .elements-act {
-        background-color: palevioletred;   
-    }
-}
-.table-sub {
-    width: 97%;
-    margin-top: 30px;
-    td{
-        @include tdata;
-        &:first-child {
-            width: 9%;
-        }
-        /*&:second-child {
-            width: 3%;
-        }*/ // why dont work?
-        .number {
-            @include typography-number;
-        }
-        .fullname {
-            @include typography-fullname; 
-        }
-        .element {
-            @include typography-element;
-        }
-    }
-    .elements-lan {
-        background-color: rgb(141, 51, 224);  
-    }
-    .elements-act {
-        background-color: palevioletred;   
-    }
-    .group {
-        font-weight: bold;
-        font-size: 1.2rem;
-        text-align: end;
-    }
-    .star {
-        @include typography;
-        color: rgb(141, 51, 224);
-        width: 2%;
-    }
-    .star2 {
-        @include typography;
-        color: palevioletred;
-        width: 2%;
-    }
-}
-@media screen and (max-width: 768px) {
-    .table-main {
-        width: 100%;
-        tr {
-            display: flex;
-            flex-flow: row wrap;
-            td {
-                width: 15%;
-                .list1 {
-                    display: flex;
-                    flex-flow: column wrap;
-                    justify-content: flex-start;  
-                }
-                .list3-blue, .list3-lan, .list3-act, .list1-red, .list1-yellow, .list1-orange, .list1-grey, .list2-green, .list2-lightgreen, .list2-cyan {
-                    font-size: 1rem;
-                }
-                .list2-green, .list2-lightgreen, .list2-cyan, .list3-blue, .list3-lan, .list3-act {
-                    margin-left: 20px;
-                }
-            }
-        }
-    }
-    .table-sub {
-       tr {
-        display: flex;
-        flex-flow: row wrap;
-        height: 350px;
-            td {
-                width: 15%;
-            &:first-child {
-                width: 30%;
-            }
-            }
-       }  
-    }
-}
+@import "base/utilities";
+@import "base/typography";
+@import "layout/elements";
+@import "base/base";
+@import "pages/elements.scss";
+@import "abstracts/mixins";
+@import "layout/table";
+@import "pages/table";
