--- a/sass/pages/_table.scss
+++ b/sass/pages/_table.scss
@@ -131,3 +131,119 @@
 			background-color: rgb(216, 112, 147);
 		}
 	}
+	.history {
+		align-self: flex-start;
+		margin-left: 75px;
+	}
+	.history__article {
+		display: none;
+	}
+	
+	.table-sub--outline {
+		box-shadow: 2px 2px 5px 0px rgb(27, 27, 27);
+		transform: scale(1.05);
+	}
+
+	//learn list
+
+	.learn-list {
+		background-color: rgba(46, 49, 189, 0.8);
+		padding: 3px;
+		position: absolute;
+		top: 10px;
+		right: 75px;
+		border-radius: 5px;
+		&__title {
+			font-size: 1.5rem;
+			text-align: center;
+		}
+		ul {
+			list-style-type: none;
+			.list {
+				border-left: 2px solid rgba(128, 128, 128, 3);
+				margin-top: 3px;
+				height: 15px;
+				.name {
+					font-size: 1.5rem;
+					text-transform: capitalize;
+					width: 80%;
+					margin-left: 5px;
+				}
+				.btn-delete {
+					width: 50px;
+					font-weight: bold;
+					background-color: rgba(128, 128, 128, 0.7);
+				}
+			}
+		}
+		input[type=text] {
+			background-color: rgba(245, 243, 243, 0.7);
+			border-radius: 2px;
+			padding: 2px;
+			text-transform: capitalize;
+		}
+}
+label {
+	font-size: 1.3rem;
+	font-weight: bold;
+}
+ // modal window
+.modal-window {
+	//display: none;
+	position: fixed;
+	z-index: 1;
+	top: 0;
+	left: 0;
+
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: white;
+	box-shadow: 1px 1px 1px 1px gray;
+	animation-name: modalopen;
+	animation-duration: 1s;
+	&--main {
+		display: flex;
+		flex-flow: column wrap;
+		align-content: center;
+		.btn--close {
+			align-self: flex-end;
+			font-size: 1.3rem;
+			font-weight: bold;
+		}
+		.or {
+			text-align: center;
+			color: rgb(124, 124, 233);
+			font-size: 1.3rem;
+		}
+		input[type=email] {
+			border: none;
+			border-bottom: 1px solid gray;
+			margin-top: 10px;
+		}
+		input[type=password] {
+			border: none;
+			border-bottom: 1px solid grey;
+			margin-top: 20px;
+		}
+		.bth--signin {
+			width: 98%;
+			height: 20px;
+			margin-top: 20px;
+			background-color: blueviolet;
+			color: white;
+			text-align: center;
+			padding-top: 10px;
+		}
+	}
+	&--footer {
+		margin: 10px 5px;
+		display: flex;
+		justify-content: space-between;
+	}
+}
+
+@keyframes modalopen {
+	from {opacity: 0;}
+	to {opacity: 1;}
+}
